@startuml Database

legend top
* generating results, crash in middle => no ""Query.result_date""
* when running second time, use unique index
* when all results are stored, compute all
  involved Word's scores by summing among
  all results (not just the one from the
  current query).
end legend

entity Word {
    word_id
    ---
    text
    score INT NOT NULL DEFAULT 0
}

note right of Word
Imported.
end note

entity Query {
    query_id
    ---
    text
    result_date TIMESTAMP WITHOUT TIME ZONE NULL
}

note right of Query
Generated by users.
end note

entity ResultWord {
    result_word_id
    ---
    query_id
    word_id
}

note right of ResultWord
Generated by analysis. Once analysis is done,
""Query.result_date"" is updated.

""(query_id, word_id)"" combination is unique.
end note

Query ||--|{ ResultWord
ResultWord }|--|| Word

@enduml
